--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -20,6 +20,7 @@
 # Robin Thoni <rob57530@gmail.com>, 2015
 # Stéphane Henriot <shloub@gmail.com>, 2016
 # Théophile Bastian <contact@tobast.fr>, 2017
+# Valentin Seux <valentin.seux@prologin.org>, 2020
 # Victor Collod <victor.collod@prologin.org>, 2016
 # Alexandre Macabies <web+transifex@zopieux.com>, 2015
 # Yves Stadler <mvyonline@gmail.com>, 2015
@@ -27,9 +28,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-27 11:09+0200\n"
-"PO-Revision-Date: 2020-04-27 09:09+0000\n"
-"Last-Translator: Antoine Pietri <antoine.pietri1@gmail.com>\n"
+"POT-Creation-Date: 2020-05-05 20:15+0200\n"
+"PO-Revision-Date: 2020-04-30 06:54+0000\n"
+"Last-Translator: Valentin Seux <valentin.seux@prologin.org>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -3515,15 +3516,15 @@ msgstr ""
 #: pages/templates/pages/about-privacy-policy.html:15
 #: prologin/templates/prologin/main-footer.html:12
 msgid "Privacy policy"
-msgstr ""
+msgstr "Politique de Confidentialité"
 
 #: pages/templates/pages/about-privacy-policy.html:17
 msgid "Prologin and your Personal Data"
-msgstr ""
+msgstr "Prologin et vos données personnelles"
 
 #: pages/templates/pages/about-privacy-policy.html:19
 msgid "About the Processing"
-msgstr ""
+msgstr "Objet du traitement de données"
 
 #: pages/templates/pages/about-privacy-policy.html:22
 msgid ""
@@ -3548,10 +3549,30 @@ msgid ""
 "the declared purposes (art. 6(1)a of GDPR).\n"
 "        "
 msgstr ""
+"\n"
+"#### Finalités \n"
+"\n"
+"Le traitement a pour objet **l'organisation du concours Prologin**. \n"
+"Il permet à l'association Prologin :\n"
+" \n"
+"* de traiter les demandes d'inscription sur le site Prologin ;\n"
+"* de fournir les services de communication (forum) et d'évaluation de code "
+"(juge en ligne) ;\n"
+" * de traiter les demandes de participation au concours Prologin ;\n"
+"* d'adapter les repas aux contraintes alimentaires de chacun ;\n"
+"* de répondre aux sollicitations de la part des participants ;\n"
+"* de piloter l'activité de l'association (évaluation de la satisfaction des "
+"participants, production de statistiques).\n"
+"\n"
+"#### Base légale\n"
+"\n"
+"Ce traitement repose sur le consentement des inscrits et de leur responsable "
+"légal le cas échéant (mineurs de 16 ans), ce sont les articles 6(1)a et 8 du "
+"RGPD. "
 
 #: pages/templates/pages/about-privacy-policy.html:43
 msgid "Processed Data"
-msgstr ""
+msgstr "Données traitées"
 
 #: pages/templates/pages/about-privacy-policy.html:46
 msgid ""
@@ -3595,10 +3616,50 @@ msgid ""
 "can be contacted directly.\n"
 "        "
 msgstr ""
+"\n"
+"#### Catégories de données traitées\n"
+"\n"
+"L'inscription sur le site nécessite les catégories de données suivantes :\n"
+"\n"
+"* Données d'identification : pseudonyme, adresse email ;\n"
+"* Internet : mesure d'audience ;\n"
+" \n"
+"La participation au concours requiert des informations complémentaires :\n"
+"\n"
+"* Données d'identification : nom, prénom, adresse postale, date de "
+"naissance... ;\n"
+"* Vie scolaire (dite professionnelle) : niveau d'étude ;\n"
+"* Vie personnelle : habitudes alimentaires ;\n"
+"* Internet : mesure d'audience ;\n"
+"* Données de santé : éventuels traitements médicaux et allergies.\n"
+"\n"
+"#### Source des données\n"
+"\n"
+"Ces informations sont recueillies directement auprès du participant, et/ou "
+"de son responsable légal le cas échéant (mineurs de 16 ans).\n"
+"\n"
+"#### Caractère obligatoire des réponses\n"
+"\n"
+"L'inscription au site Prologin prévoit, sauf mention contraire, le recueil "
+"obligatoire de données qui sont nécessaires au traitement de l'inscription.\n"
+"\n"
+"La participation à une édition du concours Prologin prévoit, sauf mention "
+"contraire, le recueil obligatoire de données qui sont nécessaires au "
+"traitement de l'inscription et l'accueil sur site dans de bonnes "
+"conditions.\n"
+"\n"
+"#### Prise de décision automatisée\n"
+"\n"
+"Le traitement peut inclure une décision entièrement automatisée : les "
+"demandes de participation au concours Prologin d'un niveau manifestement "
+"insuffisant (évaluation par le juge en ligne Prologin) sont automatiquement "
+"écartées. Bien que cette décision automatique ne produise ni effet juridique "
+"ni impact significatif, Prologin peut être [contacté directement](mailto:"
+"info@prologin.org) pour demander une évaluation manuelle. "
 
 #: pages/templates/pages/about-privacy-policy.html:80
 msgid "Data Subjects"
-msgstr ""
+msgstr "Personnes concernées"
 
 #: pages/templates/pages/about-privacy-policy.html:83
 msgid ""
@@ -3613,10 +3674,20 @@ msgid ""
 "*   natural or legal persons from Prologin partners and/or sub-processors.\n"
 "        "
 msgstr ""
+"\n"
+"Le traitement de données concerne :\n"
+"\n"
+"* les personnes physiques s'inscrivant au site de Prologin;\n"
+"* les personnes physiques s'inscrivant au concours Prologin\n"
+"* les responsables légaux des personnes ci-dessus le cas échéant (mineurs de "
+"16 ans);\n"
+"* les membres de Prologin chargés de l'organisation des stages;\n"
+"* les personnes physiques ou morales partenaires ou sous-traitants de "
+"Prologin."
 
 #: pages/templates/pages/about-privacy-policy.html:96
 msgid "Data Recipients"
-msgstr ""
+msgstr "Destinataires des données"
 
 #: pages/templates/pages/about-privacy-policy.html:99
 msgid ""
@@ -3638,10 +3709,26 @@ msgid ""
 "Switzerland.\n"
 "        "
 msgstr ""
+"\n"
+"#### Catégories de destinataires\n"
+"\n"
+"En fonction de leurs besoins respectifs, sont destinataires de tout ou "
+"partie des données :\n"
+"\n"
+"* les membres autorisés de Prologin ;\n"
+"* les membres autorisés des partenaires et/ou sous-traitants de Prologin ;\n"
+"* les services de secours d'urgence en cas de besoin.\n"
+"\n"
+"#### Transfert des données hors UE\n"
+"\n"
+"Des transferts de données hors de l'Union européenne peuvent avoir lieu "
+"(partenaire en Suisse pour l'organisation d'une épreuve régionale). Cela ne "
+"concerne que les candidats au concours Prologin participant aux épreuves "
+"régionales en Suisse."
 
 #: pages/templates/pages/about-privacy-policy.html:116
 msgid "Storage Period"
-msgstr ""
+msgstr "Durée de conservation"
 
 #: pages/templates/pages/about-privacy-policy.html:119
 msgid ""
@@ -3651,10 +3738,14 @@ msgid ""
 "Health data are deleted three years after the end of the final.\n"
 "        "
 msgstr ""
+"\n"
+"Les données d’identification, de vie scolaire et personnelle sont conservées "
+"jusqu'à la désinscription de la personne de Prologin.\n"
+"Les données de santé sont conservées jusqu'à 3 ans après la fin de la finale."
 
 #: pages/templates/pages/about-privacy-policy.html:127
 msgid "Security"
-msgstr ""
+msgstr "Sécurité"
 
 #: pages/templates/pages/about-privacy-policy.html:130
 msgid ""
@@ -3665,10 +3756,15 @@ msgid ""
 "encryption in-transit and externalized backups.\n"
 "        "
 msgstr ""
+"\n"
+"Des mesures de sécurité visant à garantir la confidentialité, l'intégrité et "
+"la disponibilité des données collectées, issues du référentiel ISO/IEC27002 "
+"ont été mises en œuvre. Elles comprennent, sans s'y limiter, le chiffrement "
+"des données en transit et leur sauvegarde régulière externalisée."
 
 #: pages/templates/pages/about-privacy-policy.html:137
 msgid "Your Rights"
-msgstr ""
+msgstr "Vos droits sur vos données"
 
 #: pages/templates/pages/about-privacy-policy.html:140
 msgid ""
@@ -3694,6 +3790,24 @@ msgid ""
 "us, you can lodge a complaint with your national Data Protection Authority.\n"
 "        "
 msgstr ""
+"\n"
+"#### L'essentiel\n"
+"\n"
+"Vous disposez (le cas échéant _via_ le responsable légal) des droits "
+"d'accéder et d'obtenir copie des données vous concernant, de vous opposer au "
+"traitement de ces données, de les faire rectifier ou les faire effacer. Vous "
+"disposez également d'un droit à la limitation du traitement de vos données. "
+"Rendez-vous sur le site de la CNIL pour mieux comprendre vos droits.\n"
+"\n"
+"#### Exercer vos droits\n"
+"\n"
+"Toute demande d'exercice de vos droits doit être adressée par voie "
+"électronique à [info@prologin.org](mailto:info@prologin.org).\n"
+"\n"
+"#### Réclamation auprès de la CNIL\n"
+"\n"
+"Si vous estimez, après nous avoir contacté, que vos droits sur vos données "
+"ne sont pas respectés, vous pouvez alors adresser une réclamation à la CNIL."
 
 #: pages/templates/pages/about-qualification.html:8
 #: pages/templates/pages/about-qualification.html:11
@@ -6178,6 +6292,7 @@ msgstr ""
 #: users/templates/users/edit.html:25 users/templates/users/register.html:22
 msgid "I consent to the processing of my personal data above by Prologin."
 msgstr ""
+"Je consens au traitement de mes données personnelles ci-dessus par Prologin."
 
 #: users/templates/users/edit.html:26
 #: users/templates/users/edit_password.html:25
@@ -6195,6 +6310,13 @@ msgid ""
 "visit \n"
 "      "
 msgstr ""
+"\n"
+"Prologin est organisé par l'Association Prologin, qui agit en tant que "
+"contrôleur de données. Les réponses collectées dans ce formulaire nous "
+"permettent de fournir les services (communication et juge en ligne) et de "
+"préparer le concours: sélections, restrictions alimentaires, etc...\n"
+"Pour en apprendre plus à propos de notre gestion des données et de vos "
+"droits, consultez "
 
 #: users/templates/users/edit.html:32 users/templates/users/register.html:35
 msgid "our dedicated page."
